--- a/index.html
+++ b/index.html
@@ -12,117 +12,117 @@
     </div>
 </div>
 <div class="container flex mx-auto p-2 gap-10 h-full">
-    <aside class="history bg-white rounded shadow-md p-5 flex flex-col gap-2 hidden md:flex max-h-80">
-        <div class="section-title">
-            <h2 class="font-bold text-xl text-center">История запросов</h2>
-        </div>
-        <div class="queries pt-2 flex flex-col gap-2 h-full overflow-y-auto text-nowrap w-60 [&>*:nth-child(even)]:bg-[#D9D9D9]">
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="query flex justify-between w-full">
-                <div class="query-text">
-                    <span>Расчет: 02-11-2024 07:00</span>
-                </div>
-                <div class="query-action">
-                    <div class="icon cursor-pointer">
-                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"
-                             viewBox="0 0 24 24" width="24" height="24">
-                            <use href="sprite.svg#icon-close"></use>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </aside>
+<!--    <aside class="history bg-white rounded shadow-md p-5 flex flex-col gap-2 hidden md:flex max-h-80">-->
+<!--        <div class="section-title">-->
+<!--            <h2 class="font-bold text-xl text-center">История запросов</h2>-->
+<!--        </div>-->
+<!--        <div class="queries pt-2 flex flex-col gap-2 h-full overflow-y-auto text-nowrap w-60 [&>*:nth-child(even)]:bg-[#D9D9D9]">-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="query flex justify-between w-full">-->
+<!--                <div class="query-text">-->
+<!--                    <span>Расчет: 02-11-2024 07:00</span>-->
+<!--                </div>-->
+<!--                <div class="query-action">-->
+<!--                    <div class="icon cursor-pointer">-->
+<!--                        <svg class="tailwind-icon stroke-2 stroke-gray-400 hover:stroke-black transition-colors"-->
+<!--                             viewBox="0 0 24 24" width="24" height="24">-->
+<!--                            <use href="sprite.svg#icon-close"></use>-->
+<!--                        </svg>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </aside>-->
     <main class="chat-container rounded shadow-md p-5 w-full bg-white h-full flex flex-col gap-2">
         <div class="section-title">
             <h2 class="uppercase font-bold text-xl">Расчет площади вспаханных земель 🌏</h2>
