--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="">
+<body class="h-screen">
 <div class="modal fixed inset-0 bg-[#E4F0DF] transition-all z-50" id="modal">
     <div class="image absolute left-2/4 -translate-x-2/4 top-2/4 -translate-y-2/4">
         <img src="./3.gif" alt="Лоадер">
